--- a/keepkalm/templates/front.html
+++ b/keepkalm/templates/front.html
@@ -16,9 +16,9 @@
         
     <div class="innner">
             {% if animate %}
-                <h1 class="gray animate-fading"> take a minute for yourself </h1>
+                <h1 class="gray animate-fading"> Welcome To Keep Kalm </h1>
             {% else %}
-                <h1 class="gray"> welcome </h1>
+                <h1 class="gray">Please Answer Relaxation Survey </h1>
                 <a href="/keepkalm">
                     <input type="button" value="continue to questions" class="button">
                 </a>
