--- a/keepkalm/styles/style.css
+++ b/keepkalm/styles/style.css
@@ -2,6 +2,8 @@ body {
   font-size: 2.5rem;
   display: flex;
   justify-content: center;
+  color: yellow;
+  background-image: url("https://i.pinimg.com/originals/16/6b/0c/166b0c5b64ffb3121f3505b714b3ef88.jpg")
 }
 
 /* h1
@@ -10,8 +12,7 @@ body {
 } */
 
 body {
-  background-color: purple;
-  color: yellow;
+  color: white;
 }
 
 .header {
@@ -69,8 +70,8 @@ opacity: 0;
 }
 
 .gray{
-  color: gray;
-  font-size: 5em;
+  color:white;
+  font-size: 2em;
 }
 
 .container{
